list first item fix

--- a/client/styles/sidebar.styl
+++ b/client/styles/sidebar.styl
@@ -56,7 +56,7 @@
 .side-bar .active-indicators li
   margin-top 12px
 
-.side-bar lifirst-child
+.side-bar li:first-child
   margin-top 0px
 
 .side-bar a
