--- a/client/styles/main.styl
+++ b/client/styles/main.styl
@@ -9,15 +9,15 @@ body
   margin 0
 
 .main-layout
-  display flex
+  display flex // for top-bar and container
   flex-direction column
 
 .container
   flex 1 0
-  display flex // for sidebar and topbar
+  display flex // for .charts and .side-bar
 
 .charts
-  flex 1 0
+  flex 1
 
 /* Let's get this party started */
 ::-webkit-scrollbar
