--- a/client/styles/sidebar.styl
+++ b/client/styles/sidebar.styl
@@ -2,7 +2,7 @@
   display:none
 
 .side-bar-trigger ~ label
-  background-image url("ic_navigate_before_white_24dp_2x.png")
+  background-image url("ic_search_white_24dp_2x.png")
   z-index 1000
   position absolute
   right 0
