--- a/client/styles/main.styl
+++ b/client/styles/main.styl
@@ -20,6 +20,18 @@ body
   flex 1
 
 /* Let's get this party started */
+
+/* WebKit/Blink Browsers */
+::selection
+  background #00adc6
+  color: white
+
+/* Gecko Browsers */
+::-moz-selection
+  background #00adc6
+  color: white
+
+
 ::-webkit-scrollbar
   width 10px
 
