--- a/client/styles/sidebar.styl
+++ b/client/styles/sidebar.styl
@@ -13,6 +13,8 @@
   width 50px
   transition all 0.15s linear
   transform translateX(calc(-300px))
+  -webkit-border-radius 8px 0 0 8px
+  -moz-border-radius 8px 0 0 8px
   border-radius 8px 0 0 8px
 
 .side-bar-trigger:checked ~ label
@@ -30,11 +32,32 @@ input:checked ~ .side-bar
   flex 0 0 750px
 
 .side-bar .section input
+  border 2px solid #ebebeb
+  height 30px
+  margin 10px 30px 0 20px
+  padding 0 10px 0 10px
+  -webkit-border-radius 10px
+  -moz-border-radius 10px
+  border-radius 10px
+  background url("ic_search_gray_24dp_2x.png") no-repeat right center
+  background-size 30px
+  outline none
   display none
 
 input:checked ~ .side-bar .section input
-  margin 5px 10px 5px 10px
   display block
+
+/* individual: webkit */
+.side-bar .section input::-webkit-input-placeholder
+  font-style italic
+  font-size 1.1em
+  color #dddddd
+
+/* individual: mozilla */
+.side-bar .section input::-moz-placeholder
+  font-style italic
+  font-size 1.1em
+  color #dddddd
 
 .side-bar .section
   border solid #ebebeb medium
@@ -105,4 +128,7 @@ input:checked ~ .side-bar .section input
 .side-bar .active-indicators a
   background #ebebeb
   padding 10px
+  -webkit-border-radius 8px
+  -moz-border-radius 8px
+  border-radius 8px
   border-radius 8px
