fake navigation bar

--- a/client/styles/topbar.styl
+++ b/client/styles/topbar.styl
@@ -1,10 +1,15 @@
-.top-bar
+.top-bar .fake-navigation
+  background-image url("fake.jpg")
+  height 140px
+  background-size height 120px
+  background-color #00adc6
+  background-repeat no-repeat
+
+.top-bar .chart-types
   font-size .9em
   padding 15px
   background #ebebeb
   color #636363
-
-.top-bar div
   display flex
 
 .top-bar ul
