--- a/client/styles/main.styl
+++ b/client/styles/main.styl
@@ -5,7 +5,9 @@ body,
   height 100%
 
 body
-  font-family 'Roboto', sans-serif
+  font-family 'Lato', sans-serif
+  //font-family 'Open Sans', sans-serif
+  //font-family 'Roboto', sans-serif
   margin 0
 
 .main-layout
