--- a/client/styles/topbar.styl
+++ b/client/styles/topbar.styl
@@ -1,25 +1,33 @@
 .top-bar .fake-navigation
   background-image url("fake.jpg")
-  height 140px
-  background-size height 120px
+  height 125px
+  background-size height 140px
   background-color #00adc6
   background-repeat no-repeat
 
 .top-bar .chart-types
   font-size .9em
-  padding 15px
+  height 40px
   background #ebebeb
-  color #636363
+  color #727272
   display flex
+  justify-content center
 
-.top-bar ul
-  margin auto
-  list-style none
+.top-bar div
+  display flex
+  align-items center
 
-.top-bar li:first-child
-  font-size 1.1em
+.top-bar .chart-type
+  margin 0 10px 0 50px
 
-.top-bar li
-  vertical-align middle
-  margin-right 50px
-  float: left
+.top-bar .chart-type a
+  display flex
+  align-items center
+  text-decoration none
+  color #727272
+
+.top-bar .chart-type img
+  align-self center
+  height 25px
+  width 25px
+  padding-right 10px
