--- a/client/styles/main.styl
+++ b/client/styles/main.styl
@@ -5,8 +5,8 @@ body,
   height 100%
 
 body
-  font-family 'Lato', sans-serif
-  //font-family 'Open Sans', sans-serif
+  //font-family 'Lato', sans-serif
+  font-family 'Open Sans', sans-serif
   //font-family 'Roboto', sans-serif
   margin 0
 
@@ -20,6 +20,24 @@ body
 
 .charts
   flex 1
+
+.view-active-trigger
+  background-color #00adc6
+  flex 0 0 40px
+  line-height 40px
+  display flex
+
+.view-active-trigger a
+  text-align center
+  color white
+
+.view-active-trigger div
+  display flex
+  align-items center
+  justify-content center
+
+.view-active-trigger img
+  height 30px
 
 /* Let's get this party started */
 
