--- a/client/styles/topbar.styl
+++ b/client/styles/topbar.styl
@@ -17,14 +17,20 @@
   display flex
   align-items center
 
+.top-bar .chart-types .label
+  margin 0 30px 0 0
+  font-weight bold
+
 .top-bar .chart-type
-  margin 0 10px 0 50px
+  margin 0 10px 0 10px
 
 .top-bar .chart-type a
   display flex
   align-items center
   text-decoration none
+  font-size .9em
   color #727272
+  padding 0 20px 0 20px
 
 .top-bar .chart-type img
   align-self center
