--- a/client/styles/sidebar.styl
+++ b/client/styles/sidebar.styl
@@ -65,6 +65,9 @@
   flex-direction column
   padding-right 15px
 
+.side-bar .section .list a div
+  display flex
+
 .side-bar .countries
   flex 0 1 40%
 
@@ -130,8 +133,25 @@
 .side-bar .indicators a,
 .side-bar .active-indicators a
   font-size 15px
-  background #ebebeb
   padding 10px
   -webkit-border-radius 8px
   -moz-border-radius 8px
   border-radius 8px
+
+.side-bar .indicators a
+  background #ebebeb
+
+.side-bar .active-indicators a
+  background white
+
+.side-bar .active-indicators .close
+  color white
+  background-color red
+  display table
+  border-radius 12px
+  margin 2px 10px 0 -10px
+  font-size 15px
+
+.side-bar .indicators .active
+  color white
+  background #00adc6
