--- a/client/styles/sidebar.styl
+++ b/client/styles/sidebar.styl
@@ -1,5 +1,18 @@
+.side-bar
+  flex 0 0 300px
+  color #636363
+  display flex
+  flex-direction column
+  transition all 0.15s linear
+
+/*
+/
+/ Side Bar Trigger
+/
+*/
+
 .side-bar-trigger
-  display:none
+  display: none
 
 .side-bar-trigger ~ label
   background-image url("ic_search_white_24dp_2x.png")
@@ -13,49 +26,45 @@
   width 50px
   transition all 0.15s linear
   transform translateX(calc(-300px))
-  -webkit-border-radius 8px 0 0 8px
-  -moz-border-radius 8px 0 0 8px
   border-radius 8px 0 0 8px
 
 .side-bar-trigger:checked ~ label
   background-image url("ic_navigate_next_white_24dp_2x.png")
   transform translateX(calc(-750px))
 
-.side-bar
-  flex 0 0 300px
-  color #636363
-  display flex
-  flex-direction column
-  transition all 0.15s linear
-
 .side-bar-trigger:checked ~ .side-bar
   flex 0 0 750px
 
+/*
+/
+/ Filter
+/
+*/
+
 .side-bar .filter
-  border 2px solid #ebebeb
-  height 30px
-  margin 10px 30px 0 20px
-  padding 0 10px 0 10px
-  -webkit-border-radius 10px
-  -moz-border-radius 10px
-  border-radius 10px
-  background url("ic_search_gray_24dp_2x.png") no-repeat right center
-  background-size 30px
-  outline none
   display none
 
 .side-bar-trigger:checked ~ .side-bar .filter
   display block
+  flex 0 0 35px
+  border 2px solid #ebebeb
+  margin 10px 30px 0 20px
+  padding 0 10px 0 10px
+  border-radius 10px
+  background url("ic_search_gray_24dp_2x.png") no-repeat right center
+  background-size 30px
+  outline none
 
 .filter::-webkit-input-placeholder
   font-style italic
   font-size 1.1em
   color #dddddd
 
-.filter::-moz-placeholder
-  font-style italic
-  font-size 1.1em
-  color #dddddd
+/*
+/
+/ Sections
+/
+*/
 
 .side-bar .section
   border solid #ebebeb medium
@@ -64,15 +73,6 @@
   display flex
   flex-direction column
   padding-right 15px
-
-.side-bar .section .list a div
-  display flex
-
-.side-bar .countries
-  flex 0 1 40%
-
-.side-bar .indicators
-  flex 0 1 60%
 
 .side-bar .active-indicators-open
   flex 1 0 calc(100% - 50px)
@@ -94,64 +94,88 @@
   flex 0 0
 
 .side-bar .list
-  margin 10px 0 15px 0
-  flex 1 0
+  margin 30px 0 15px 0
   overflow-y scroll
-
-.side-bar ul
   padding 0
+  list-style none
 
-.side-bar li
-  font-size 1em
-  padding 4px
-  display flex
-  margin 0 15px 0 15px
+.side-bar .item:hover
+  cursor pointer
 
-.side-bar .countries li
-  margin-left 70px
-  display list-item
-  line-height 25px
-  font-size 25px
+/*
+/
+/ Countries Section
+/
+*/
 
-.side-bar .indicators li,
-.side-bar .active-indicators li
-  margin-top 12px
+.side-bar .countries
+  flex 0 1 40%
 
-.side-bar li:first-child
-  margin-top 0px
+.side-bar .countries .item
+  margin 0 0 10px 40px
+  padding 0 10px 0 0
 
-.side-bar a
-  text-decoration none
-  color #727272
-  display inline-block
-  width 100%
+.side-bar .countries .active
+  color #00adc6
 
-.side-bar .countries a
-  vertical-align top
-  font-size 15px
+/*
+/
+/ Indicators Section
+/
+*/
 
-.side-bar .indicators a,
-.side-bar .active-indicators a
-  font-size 15px
-  padding 10px
-  -webkit-border-radius 8px
-  -moz-border-radius 8px
+.side-bar .indicators
+  flex 0 1 60%
+
+.side-bar .indicators .item
   border-radius 8px
+  color #727272
+  background-color #e3e3e3
+  margin 0 10px 25px 10px
+  padding 10px
 
-.side-bar .indicators a
-  background #ebebeb
+.side-bar .indicators .active
+  color white
+  background-color #00adc6
 
-.side-bar .active-indicators a
-  background white
+/*
+/
+/ Active Indicators Section
+/
+*/
 
-.side-bar .active-indicators .close
+.side-bar .active-indicators .item
+  display flex
+  margin 0 10px 25px 10px
+  padding 10px
+
+/*
+/
+/ View Active Trigger
+/
+*/
+
+.side-bar .view-active-trigger
+  justify-content center
+  color white
+
+.side-bar .view-active-trigger:hover
+  cursor pointer
+
+/*
+/
+/ Misc
+/
+*/
+
+.side-bar .dot
+  font-size 10px
+  margin-right 20px
+
+.side-bar .close
   color white
   background-color red
   display table
   border-radius 12px
-  margin 2px 10px 0 -10px
+  margin 0 10px 0 0
   font-size 15px
-
-.side-bar .indicators .active
-  color white
-  background #00adc6
