--- a/client/styles/topbar.styl
+++ b/client/styles/topbar.styl
@@ -6,8 +6,7 @@
   background-repeat no-repeat
 
 .top-bar .chart-types
-  font-size .9em
-  height 40px
+  padding 10px 0 10px 0
   background #ebebeb
   color #727272
   display flex
@@ -16,13 +15,28 @@
 
 .top-bar .chart-types .label
   margin 0 30px 0 0
+  font-size 15px
   font-weight bold
 
 .top-bar .chart-type
+  font-size 14px
   margin 0 10px 0 10px
+  display flex
+  align-items center
 
 .top-bar .chart-type img
-  align-self center
   height 25px
   width 25px
   padding-right 10px
+
+@media (max-width: 600px)
+
+  .top-bar .chart-types
+    flex-direction column
+    align-items center
+
+  .top-bar .chart-types .label
+    margin 0 0px 0 0
+
+  .top-bar .chart-type
+    margin-top  10px
