add char area (incomplete)

--- a/client/styles/main.styl
+++ b/client/styles/main.styl
@@ -22,10 +22,7 @@ body
 
 .container
   flex 1 0
-  display flex // for .charts and .side-bar
-
-.charts
-  flex 1
+  display flex // for .chart-area and .side-bar
 
 /*
 /
