graphs are now selectable

--- a/client/styles/main.styl
+++ b/client/styles/main.styl
@@ -10,6 +10,16 @@ body
   //font-family 'Roboto', sans-serif
   margin 0
 
+button
+  background none
+  border none
+  outline none
+  font inherit
+  color inherit
+
+button:hover
+  cursor pointer
+
 /*
 /
 / Layout
