--- a/client/styles/topbar.styl
+++ b/client/styles/topbar.styl
@@ -8,7 +8,6 @@
 .top-bar .chart-types
   padding 10px 0 10px 0
   background #ebebeb
-  color #727272
   display flex
   justify-content center
   align-items center
@@ -17,12 +16,17 @@
   margin 0 30px 0 0
   font-size 15px
   font-weight bold
+  color #727272
 
 .top-bar .chart-type
   font-size 14px
   margin 0 10px 0 10px
   display flex
   align-items center
+  color white
+
+.top-bar .chart-type.available
+  color #727272
 
 .top-bar .chart-type img
   height 25px
