color icons on select

--- a/client/styles/topbar.styl
+++ b/client/styles/topbar.styl
@@ -33,6 +33,11 @@
   width 25px
   padding-right 10px
 
+.top-bar .chart-type object
+  height 25px
+  width 25px
+  padding-right 10px
+
 @media (max-width: 600px)
 
   .top-bar .chart-types
