--- a/client/styles/charts.styl
+++ b/client/styles/charts.styl
@@ -1,7 +1,9 @@
 .chart-area
   flex 1 1
-  margin 20px 60px 20px 60px
+  padding 20px 60px 20px 60px
   color #727272
+  display flex
+  flex-direction column
 
 .chart-area .title
   font-size 36px
@@ -36,12 +38,11 @@
 */
 
 .chart-area .text-wrapper
-  height calc(20% + 50px)
+  flex 0 0 20%
 
 .chart-area .chart-wrapper
-  height calc(80% - 70px)
+  flex 0 1 80%
   background-color #fdfdfd
-  padding 0 10px 20px 10px
 
 /*
 /
@@ -50,7 +51,7 @@
 */
 
 .chart-area .chart
-  height 75%
+  height 70%
 
 /*
 /
