--- a/client/styles/topbar.styl
+++ b/client/styles/topbar.styl
@@ -1,9 +1,93 @@
-.top-bar .fake-navigation
-  background-image url("fake.jpg")
-  height 125px
-  background-size height 140px
-  background-color #00adc6
-  background-repeat no-repeat
+/*
+/
+/ NavBar
+/
+*/
+
+.top-bar .nav-bar
+  background-color #525866
+  color white
+  font-size 16px
+  height 121px
+  border-bottom solid #0faec6 2pt
+
+// Left
+
+.top-bar .nav-bar .left
+  display inline-block
+  width 25%
+  //border-bottom solid #0faec6 2pt
+
+.top-bar .nav-bar .unaki
+  margin 40px 0 0 20px
+  height 49px
+
+// Center
+
+.top-bar .nav-bar .center
+  margin 0
+  padding 0
+  display inline-block
+  width 50%
+  border-bottom solid #e2e2e2 2pt
+
+.top-bar .nav-bar .center ul
+  list-style none
+  margin 0
+
+.top-bar .nav-bar .center li
+  display inline-block
+
+// Center-Top
+
+.top-bar .nav-bar .center .top img
+  height 20px
+  margin-right 10px
+
+.top-bar .nav-bar .center .top li
+  border-left solid white 2pt
+  margin 16px 0 16px 0
+  padding 0 20px 0 20px
+
+.top-bar .nav-bar .center .top li.language
+  border-left none
+
+// Center-Bottom
+
+.top-bar .nav-bar .center .bottom
+  color #525866
+  background-color white
+  font-weight bold
+
+.top-bar .nav-bar .center .bottom li
+  margin 16px 0 16px 0
+  padding 0 30px 0 30px
+
+.top-bar .nav-bar .center .bottom hr
+  border-bottom solid #0faec6 3pt
+
+// Right
+
+.top-bar .nav-bar .right
+  display inline-block
+  width 25%
+  border-bottom solid #0faec6 2pt
+
+.top-bar .nav-bar .k4a
+  height 49px
+
+.top-bar .nav-bar .undp
+  height 100px
+
+.top-bar .nav-bar .mbr
+  height 100px
+  width auto
+
+/*
+/
+/ Chart Types
+/
+*/
 
 .top-bar .chart-types
   padding 10px 0 10px 0
@@ -25,7 +109,7 @@
   align-items center
   color white
 
-.top-bar .chart-type.available
+.top-bar .chart-type.active
   color #727272
 
 .top-bar .chart-type img
