use Provider to pass props

--- a/client/styles/charts.styl
+++ b/client/styles/charts.styl
@@ -110,6 +110,13 @@
 .chart-area .legend .list .item
   margin-bottom 5px
 
+.chart-area .legend .list .item.draw
+  color #00adc6
+
+.chart-area .clickable
+  padding-left 32px
+  text-indent -15px
+
 /*
 /
 / Misc
@@ -118,4 +125,4 @@
 
 .chart-area .dot
   font-size 10px
-  margin-right 20px
+  margin-right 10px
