--- a/client/styles/sidebar.styl
+++ b/client/styles/sidebar.styl
@@ -69,11 +69,11 @@
   flex-direction column
   padding-right 15px
 
-.side-bar .active-indicators-open
+.side-bar .active-indicators.open
   flex 1 0 calc(100% - 50px)
   transition all 0.15s linear
 
-.side-bar .active-indicators-closed
+.side-bar .active-indicators.closed
   flex 0 0 0
   transition all 0.15s linear
 
