--- a/client/styles/topbar.styl
+++ b/client/styles/topbar.styl
@@ -11,77 +11,9 @@
   height 121px
   border-bottom solid #0faec6 2pt
 
-// Left
-
-.top-bar .nav-bar .left
-  display inline-block
-  width 25%
-  //border-bottom solid #0faec6 2pt
-
 .top-bar .nav-bar .unaki
   margin 40px 0 0 20px
   height 49px
-
-// Center
-
-.top-bar .nav-bar .center
-  margin 0
-  padding 0
-  display inline-block
-  width 50%
-  border-bottom solid #e2e2e2 2pt
-
-.top-bar .nav-bar .center ul
-  list-style none
-  margin 0
-
-.top-bar .nav-bar .center li
-  display inline-block
-
-// Center-Top
-
-.top-bar .nav-bar .center .top img
-  height 20px
-  margin-right 10px
-
-.top-bar .nav-bar .center .top li
-  border-left solid white 2pt
-  margin 16px 0 16px 0
-  padding 0 20px 0 20px
-
-.top-bar .nav-bar .center .top li.language
-  border-left none
-
-// Center-Bottom
-
-.top-bar .nav-bar .center .bottom
-  color #525866
-  background-color white
-  font-weight bold
-
-.top-bar .nav-bar .center .bottom li
-  margin 16px 0 16px 0
-  padding 0 30px 0 30px
-
-.top-bar .nav-bar .center .bottom hr
-  border-bottom solid #0faec6 3pt
-
-// Right
-
-.top-bar .nav-bar .right
-  display inline-block
-  width 25%
-  border-bottom solid #0faec6 2pt
-
-.top-bar .nav-bar .k4a
-  height 49px
-
-.top-bar .nav-bar .undp
-  height 100px
-
-.top-bar .nav-bar .mbr
-  height 100px
-  width auto
 
 /*
 /
@@ -95,47 +27,40 @@
   width 100%
   z-index 1001
 
-.top-bar .chart-types
+.chart-selector
   padding 10px 0 10px 0
   background #ebebeb
-  display flex
-  justify-content center
-  align-items center
+  text-align center
+  color white
 
-.top-bar .chart-types .label
+.chart-selector .label
   margin 0 30px 0 0
   font-size 15px
   font-weight bold
   color #727272
+  display inline-block
 
-.top-bar .chart-type
-  font-size 14px
-  margin 0 10px 0 10px
-  display flex
-  align-items center
-  color white
-
-.top-bar .chart-type.active
+.top-bar .active
   color #727272
 
-.top-bar .chart-type img
+.chart-selector img
   height 25px
   width 25px
-  padding-right 10px
-
-.top-bar .chart-type object
-  height 25px
-  width 25px
-  padding-right 10px
 
 @media (max-width: 600px)
 
-  .top-bar .chart-types
+  .chart-selector
     flex-direction column
     align-items center
 
-  .top-bar .chart-types .label
-    margin 0 0px 0 0
+@media (max-width: 500px)
 
-  .top-bar .chart-type
-    margin-top  10px
+  .chart-selector .list
+    display flex !important
+    flex-direction column
+    align-items center
+
+  .chart-selector .item
+    padding-left 0 !important
+    padding-right 0 !important
+    margin-left 0 !important
