popup on chart type hover

--- a/client/lib/semantic-ui/semantic.less
+++ b/client/lib/semantic-ui/semantic.less
@@ -26,3 +26,5 @@
 & { @import "definitions/views/item.import.less"; }
 
 /* Modules */
+& { @import "definitions/modules/popup.import.less"; }
+& { @import "definitions/modules/transition.import.less"; }
