--- a/client/styles/topbar.styl
+++ b/client/styles/topbar.styl
@@ -21,9 +21,8 @@
 /
 */
 
-.fixed
+.chart-selector.fixed
   width 100%
-  z-index 1001
 
 .chart-selector
   padding 10px 0 10px 0
@@ -41,7 +40,12 @@
 .top-bar .active
   color #727272
 
+.chart-selector .popup
+  border solid #0faec6 1pt
+  border-radius 10px
+
 .chart-selector img
+  display inline-block
   height 25px
   width 25px
 
