responsive layout added

--- a/client/styles/main.styl
+++ b/client/styles/main.styl
@@ -1,8 +1,6 @@
-html,
-body,
-#render-target,
-.main-layout
+html, body, #app, .main-layout
   height 100%
+  min-height 650px
 
 body
   font-family 'Open Sans', sans-serif
@@ -22,17 +20,73 @@ button:hover
 
 /*
 /
-/ Layout
+/ Page layout responsiveness
 /
 */
 
+.main-layout,
+.top-bar,
+.nav-bar,
+.chart-selector,
+.wrapper,
+.content,
+.chart-area,
+.footer,
+.side-bar
+  box-sizing border-box
+
 .main-layout
-  display flex // for top-bar and container
+  display flex
   flex-direction column
 
-.container
-  flex 1 0
-  display flex // for .chart-area and .side-bar
+// Top bar area
+
+.top-bar
+  width 100%
+  flex 1 1 220px // IE needs a flex basis value
+  display flex
+  flex-direction column
+
+.nav-bar
+  width 100%
+  flex 0 0 120px
+
+.chart-selector
+  width 100%
+  flex 1 1 100%
+
+// Wrapper area
+
+.wrapper
+  flex 1 1 100%
+  display flex
+
+.content
+  flex 1 1 100%
+  display flex
+  flex-direction column
+
+.chart-area
+  flex 1 1 100%
+
+.footer
+  width 100%
+  flex 1 0 100px
+
+.side-bar
+  flex 0 0 300px
+  height 100%
+
+@media (max-width: 600px)
+
+  .main-layout, .top-bar, .wrapper, .content, .side-bar
+    display block
+
+  .wrapper
+    display block
+
+  .chart-area
+    height 500px
 
 /*
 /
