--- a/client/styles/charts.styl
+++ b/client/styles/charts.styl
@@ -1,128 +1,128 @@
-.chart-area
-  flex 1 1
-  padding 20px 60px 20px 60px
-  color #727272
-  display flex
-  flex-direction column
-
-.chart-area .title
-  font-size 32px
-
-.chart-area .horizontal-line
-  margin 20px 0 20px 0
-  border-style solid
-  border-width 3pt
-  color #727272
-  width 50px
-
-.chart-area .subtitle
-  font-size 18px
-  color #00adc6
-  margin 0 0 20px 0
-
-.chart-area button
-  background none
-  border none
-  outline none
-  font inherit
-  color inherit
-  text-align left
-
-.chart-area button:hover
-  cursor pointer
-
-/*
-/
-/ Wrapper Section
-/
-*/
-
-.chart-area .text-wrapper
-  flex 0 0 10%
-
-.chart-area .chart-wrapper
-  flex 0 1 90%
-  background-color #fdfdfd
-
-/*
-/
-/ Chart Section
-/
-*/
-
-.chart-area .chart
-  height 70%
-
-/*
-/
-/ Legends Section
-/
-*/
-
-.chart-area .legends
-  height 25%
-
-.chart-area .legend
-  border solid #ebebeb 3pt
-  border-radius 5px
-  overflow hidden
-  display inline-block
-  height 100%
-  padding 0 15px 15px 15px
-
-.chart-area .legend.countries
-  width calc(30% - 6pt - 30px)
-
-.chart-area .legend.indicators
-  margin 0 0 0 20px
-  width calc(70% - 6pt - 50px)
-
-.chart-area .legend .text
-  height 20%
-  overflow hidden
-  width 100%
-  text-align center
-
-.chart-area .legend .text .title
-  font-weight bold
-  font-size 16px
-  display inline-block
-  margin 0
-  color #727272
-
-.chart-area .legend .text .subtitle
-  font-size 16px
-  display inline-block
-  margin 0
-  color #727272
-
-.chart-area .legend .list-wrapper
-  height 80%
-
-.chart-area .legend .list
-  padding 0
-  margin 0
-  list-style none
-  font-size 16px
-  overflow-y scroll
-  height 100%
-
-.chart-area .legend .list .item
-  margin-bottom 5px
-
-.chart-area .legend .list .item.draw
-  color #00adc6
-
-.chart-area .clickable
-  padding-left 32px
-  text-indent -15px
-
-/*
-/
-/ Misc
-/
-*/
-
-.chart-area .dot
-  font-size 10px
-  margin-right 10px
+//.chart-area
+//  flex 1 1
+//  padding 20px 60px 20px 60px
+//  color #727272
+//  display flex
+//  flex-direction column
+//
+//.chart-area .title
+//  font-size 32px
+//
+//.chart-area .horizontal-line
+//  margin 20px 0 20px 0
+//  border-style solid
+//  border-width 3pt
+//  color #727272
+//  width 50px
+//
+//.chart-area .subtitle
+//  font-size 18px
+//  color #00adc6
+//  margin 0 0 20px 0
+//
+//.chart-area button
+//  background none
+//  border none
+//  outline none
+//  font inherit
+//  color inherit
+//  text-align left
+//
+//.chart-area button:hover
+//  cursor pointer
+//
+///*
+///
+/// Wrapper Section
+///
+//*/
+//
+//.chart-area .text-wrapper
+//  flex 0 0 10%
+//
+//.chart-area .chart-wrapper
+//  flex 0 1 90%
+//  background-color #fdfdfd
+//
+///*
+///
+/// Chart Section
+///
+//*/
+//
+//.chart-area .chart
+//  height 70%
+//
+///*
+///
+/// Legends Section
+///
+//*/
+//
+//.chart-area .legends
+//  height 25%
+//
+//.chart-area .legend
+//  border solid #ebebeb 3pt
+//  border-radius 5px
+//  overflow hidden
+//  display inline-block
+//  height 100%
+//  padding 0 15px 15px 15px
+//
+//.chart-area .legend.countries
+//  width calc(30% - 6pt - 30px)
+//
+//.chart-area .legend.indicators
+//  margin 0 0 0 20px
+//  width calc(70% - 6pt - 50px)
+//
+//.chart-area .legend .text
+//  height 20%
+//  overflow hidden
+//  width 100%
+//  text-align center
+//
+//.chart-area .legend .text .title
+//  font-weight bold
+//  font-size 16px
+//  display inline-block
+//  margin 0
+//  color #727272
+//
+//.chart-area .legend .text .subtitle
+//  font-size 16px
+//  display inline-block
+//  margin 0
+//  color #727272
+//
+//.chart-area .legend .list-wrapper
+//  height 80%
+//
+//.chart-area .legend .list
+//  padding 0
+//  margin 0
+//  list-style none
+//  font-size 16px
+//  overflow-y scroll
+//  height 100%
+//
+//.chart-area .legend .list .item
+//  margin-bottom 5px
+//
+//.chart-area .legend .list .item.draw
+//  color #00adc6
+//
+//.chart-area .clickable
+//  padding-left 32px
+//  text-indent -15px
+//
+///*
+///
+/// Misc
+///
+//*/
+//
+//.chart-area .dot
+//  font-size 10px
+//  margin-right 10px
