--- a/client/styles/topbar.styl
+++ b/client/styles/topbar.styl
@@ -8,7 +8,6 @@
   background-color #525866
   color white
   font-size 16px
-  height 121px
   border-bottom solid #0faec6 2pt
 
 .top-bar .nav-bar .unaki
@@ -17,7 +16,7 @@
 
 /*
 /
-/ Chart Types
+/ Chart Selector
 /
 */
 
@@ -45,12 +44,6 @@
   height 25px
   width 25px
 
-@media (max-width: 600px)
-
-  .chart-selector
-    flex-direction column
-    align-items center
-
 @media (max-width: 500px)
 
   .chart-selector .list
@@ -62,3 +55,9 @@
     padding-left 0 !important
     padding-right 0 !important
     margin-left 0 !important
+
+@media (max-width: 600px)
+
+  .chart-selector
+    flex-direction column
+    align-items center
