use semantic ui for sidebar lists

--- a/client/lib/semantic-ui/site/elements/button.overrides.import.less
+++ b/client/lib/semantic-ui/site/elements/button.overrides.import.less
@@ -3,9 +3,11 @@
 *******************************/
 
 /*******************************
-            All Popups
+    Side Bar Buttons
 *******************************/
 
-.ui.popup.no-arrow:before {
-  display: none
+.side-bar button.button.view-active-trigger {
+  background-color: #00adc6;
+  border-radius: 0;
+  color: white;
 }
