--- a/client/lib/semantic-ui/site/elements/header.overrides.import.less
+++ b/client/lib/semantic-ui/site/elements/header.overrides.import.less
@@ -3,9 +3,13 @@
 *******************************/
 
 /*******************************
-            All Popups
+    Section Headers
 *******************************/
 
-.ui.popup.no-arrow:before {
-  display: none
+.ui.header {
+  //font-weight: normal;
+}
+
+.ui.header .sub.header {
+  font-style: italic;
 }
