--- a/client/lib/semantic-ui/semantic.less
+++ b/client/lib/semantic-ui/semantic.less
@@ -18,9 +18,16 @@
 & { @import "definitions/globals/site.import.less"; }
 
 /* Elements */
+& { @import "definitions/elements/button.import.less"; }
+& { @import "definitions/elements/container.import.less"; }
+& { @import "definitions/elements/header.import.less"; }
+& { @import "definitions/elements/icon.import.less"; }
+& { @import "definitions/elements/input.import.less"; }
 & { @import "definitions/elements/list.import.less"; }
 
 /* Collections */
+& { @import "definitions/collections/grid.import.less"; }
+& { @import "definitions/collections/menu.import.less"; }
 
 /* Views */
 & { @import "definitions/views/item.import.less"; }
