--- a/client/lib/semantic-ui/site/elements/button.overrides.import.less
+++ b/client/lib/semantic-ui/site/elements/button.overrides.import.less
@@ -6,8 +6,12 @@
     Side Bar Buttons
 *******************************/
 
-.side-bar button.button.view-active-trigger {
-  background-color: #00adc6;
-  border-radius: 0;
-  color: white;
+.view-active-trigger.button {
+  background-color: #00adc6 !important;
+  border-radius: 0 !important;
+  color: white !important;
+}
+
+.view-active-trigger.button:hover {
+  background-color: #00a3bc !important;
 }
