--- a/client/lib/semantic-ui/site/elements/list.overrides.import.less
+++ b/client/lib/semantic-ui/site/elements/list.overrides.import.less
@@ -64,3 +64,26 @@
 .section.indicators .list .dot {
   display: none;
 }
+
+.section.indicators .red.remove.circle.icon {
+  display: none;
+}
+
+// Active indicators are also different
+
+.section.active-indicators .list .item {
+  padding: 15px 15px 15px 0;
+}
+
+.section.active-indicators .list .item.active .content {
+  color: #636363;
+  padding: 0;
+}
+
+.section.active-indicators .list .dot {
+  display: none;
+}
+
+.section.active-indicators .red.remove.circle.icon {
+  margin: 0 5px 0 0;
+}
