--- a/client/styles/main.styl
+++ b/client/styles/main.styl
@@ -24,7 +24,11 @@ html, body, #app, .main-layout
   display flex
   flex-direction column
 
-// Wrapper area
+/*
+/
+/ Wrapper area
+/
+*/
 
 .wrapper
   flex 1 1 100%
@@ -51,22 +55,17 @@ html, body, #app, .main-layout
   .main-layout, .wrapper, .content, .side-bar
     display block
 
-  .wrapper
-    display block
-
   .chart-area
     height 500px
 
 /*
 /
-/ NavBar
+/ Top Bar
 /
 */
 
 .top-bar .nav-bar
   background-color #525866
-  color white
-  font-size 16px
   border-bottom solid #0faec6 2pt
 
 .top-bar .nav-bar .unaki
