--- a/client/styles/sidebar.styl
+++ b/client/styles/sidebar.styl
@@ -13,6 +13,10 @@
   box-sizing border-box
   padding 10px
   overflow-y hidden
+  -webkit-transition: all 200ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  -moz-transition: all 200ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  -o-transition: all 200ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  transition: all 200ms cubic-bezier(0.215, 0.610, 0.355, 1.000); // easeOutCubic
 
 .section.countries
   flex 0 1 40%
@@ -22,14 +26,8 @@
   flex 0 1 60%
   border-bottom solid 3px #ebebeb
 
-.section.ViewActiveTrigger
+.view-active-trigger
   flex 0 0 50px
-
-.section
-  -webkit-transition: all 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
-  -moz-transition: all 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
-  -o-transition: all 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
-  transition: all 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000); /* easeOutCubic */
 
 .section.active-indicators.open
   flex 0 1 100%
@@ -37,16 +35,24 @@
 .section.countries.closed,
 .section.indicators.closed,
 .section.active-indicators.closed
-  display none
+  padding 0
+  flex 0 0 0px
+  border none
 
-@media (max-width: 600px)
+@media (max-width: 768px)
 
   .side-bar
     display block
     box-shadow none
+    border none
 
   .section
     height 300px
+    border-bottom none !important
+    border-top solid 3px #ebebeb
+
+  .active-indicators, .view-active-trigger
+    display none !important
 
 /*
 /
@@ -85,25 +91,7 @@ button.side-bar-trigger
 .side-bar.expanded
   flex 0 0 750px
 
-@media (max-width: 600px)
+@media (max-width: 768px)
 
   .side-bar-trigger
     display none
-
-///*
-///
-/// Misc
-///
-//*/
-//
-//.side-bar .dot
-//  font-size 10px
-//  margin-right 20px
-//
-//.side-bar .close
-//  color white
-//  background-color red
-//  display table
-//  border-radius 12px
-//  margin 0 5px 0 0
-//  font-size 15px
