add missing semantic variable files

--- a/client/lib/semantic-ui/site/elements/list.overrides.import.less
+++ b/client/lib/semantic-ui/site/elements/list.overrides.import.less
@@ -87,3 +87,10 @@
 .section.active-indicators .red.remove.circle.icon {
   margin: 0 5px 0 0;
 }
+
+// Miscellaneous conflicts with Semantic-UI
+
+.section .ui.list .list > .item > .icon + .content,
+.section .ui.list > .item > .icon + .content {
+  padding: 0;
+}
