--- a/client/lib/semantic-ui/semantic.less
+++ b/client/lib/semantic-ui/semantic.less
@@ -24,6 +24,7 @@
 & { @import "definitions/elements/icon.import.less"; }
 & { @import "definitions/elements/input.import.less"; }
 & { @import "definitions/elements/list.import.less"; }
+& { @import "definitions/elements/segment.import.less"; }
 
 /* Collections */
 & { @import "definitions/collections/grid.import.less"; }
