added footer and various chart area changes

--- a/client/lib/semantic-ui/site/elements/divider.overrides.import.less
+++ b/client/lib/semantic-ui/site/elements/divider.overrides.import.less
@@ -2,5 +2,10 @@
     User Variable Overrides
 *******************************/
 
-@highlightBackground: #00adc6;
-@highlightColor: white;
+.ui.divider {
+
+  line-height: 1;
+  height: 0em;
+
+  text-transform: none;
+}
