--- a/client/lib/semantic-ui/site/elements/divider.variables.import.less
+++ b/client/lib/semantic-ui/site/elements/divider.variables.import.less
@@ -2,5 +2,4 @@
     User Variable Overrides
 *******************************/
 
-@highlightBackground: #00adc6;
-@highlightColor: white;
+@textTransform: none;
