--- a/client/styles/main.styl
+++ b/client/styles/main.styl
@@ -1,62 +1,54 @@
-html, body, #app, .main-layout
-  height 100%
-  min-height 650px
-  margin 0
-
 /*
 /
-/ Page layout responsiveness
+/ Layout
 /
 */
 
-.main-layout,
-.top-bar,
-.nav-bar,
-.chart-selector,
-.wrapper,
-.content,
-.chart-area,
-.footer,
+.content-wrapper
+  margin-right 300px
+  -webkit-transition: margin 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  -moz-transition: margin 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  -o-transition: margin 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  transition: margin 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000); /* easeOutCubic */
+
+.content-wrapper.shrink
+  margin-right 750px
+
 .side-bar
-  box-sizing border-box
+  width 300px
 
-.main-layout
-  display flex
-  flex-direction column
-
-/*
-/
-/ Wrapper area
-/
-*/
-
-.wrapper
-  flex 1 1 100%
-  display flex
-
-.content
-  flex 1 1 100%
-  display flex
-  flex-direction column
-
-.chart-area
-  flex 1 1 100%
-
-.footer
+.footer .top
+  margin-top 20px
+  height 100px
   width 100%
-  flex 1 0 100px
+  border-top solid 3px #ebebeb
 
-.side-bar
-  flex 0 0 300px
-  height 100%
+.footer .bottom
+  height 50px
+  width 100%
+  background-color #525865
 
 @media (max-width: 768px)
 
-  .main-layout, .wrapper, .content, .side-bar
-    display block
+  .content-wrapper
+    width 100%
+    margin 0
 
-  .chart-area
+  .side-bar
+    box-shadow none
+    border none
+    width 100% !important
+    position relative
+    margin 0
+    height 1000px
+
+  .section
     height 500px
+    border-bottom none !important
+    border-top solid 3px #ebebeb
+
+  .active-indicators, .view-active-trigger
+    display none !important
 
 /*
 /
@@ -71,59 +63,3 @@ html, body, #app, .main-layout
 .top-bar .nav-bar .unaki
   margin 20px
   height 49px
-
-/*
-/
-/ Text Highlighting
-/
-*/
-
-::selection
-  background #00adc6
-  color: white
-
-::-moz-selection
-  background #00adc6
-  color: white
-
-/*
-/
-/ Scrollbar
-/
-*/
-
-::-webkit-scrollbar
-  width 10px
-
-/* Track */
-::-webkit-scrollbar-track
-  border-radius 10px
-  border-radius 10px
-  background #dadada
-
-/* Handle */
-::-webkit-scrollbar-thumb
-  background #727272
-  border 2px solid transparent
-
-  -webkit-border-radius 10px
-  -webkit-background-clip content-box
-
-  -moz-border-radius 10px
-  -moz-background-clip content-box
-
-  border-radius 10px
-  background-clip content-box
-
-::-webkit-scrollbar-thumb:window-inactive
-  background #a4a4a4
-  border 2px solid transparent
-
-  -webkit-border-radius 10px
-  -webkit-background-clip content-box
-
-  -moz-border-radius 10px
-  -moz-background-clip content-box
-
-  border-radius 10px
-  background-clip content-box
