--- a/client/styles/sidebar.styl
+++ b/client/styles/sidebar.styl
@@ -1,22 +1,27 @@
 .side-bar
-  box-sizing border-box
+  position fixed
+  right 0
+  bottom 0
+  background-color white
   display flex
   flex-direction column
   border-left solid 3px #ebebeb
-  -webkit-transition: all 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
-  -moz-transition: all 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
-  -o-transition: all 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
-  transition: all 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000); /* easeOutCubic */
   box-shadow 0 5px 15px rgba(black, 0.2)
+  -webkit-transition: width 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  -moz-transition: width 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  -o-transition: width 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  transition: width 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000); /* easeOutCubic */
+
+.side-bar.expanded
+  width 750px
 
 .section
-  box-sizing border-box
   padding 10px
   overflow-y hidden
-  -webkit-transition: all 200ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
-  -moz-transition: all 200ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
-  -o-transition: all 200ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
-  transition: all 200ms cubic-bezier(0.215, 0.610, 0.355, 1.000); // easeOutCubic
+  -webkit-transition: flex 200ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  -moz-transition: flex 200ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  -o-transition: flex 200ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  transition: flex 200ms cubic-bezier(0.215, 0.610, 0.355, 1.000); // easeOutCubic
 
 .section.countries
   flex 0 1 40%
@@ -39,20 +44,9 @@
   flex 0 0 0px
   border none
 
-@media (max-width: 768px)
-
-  .side-bar
-    display block
-    box-shadow none
-    border none
-
-  .section
-    height 300px
-    border-bottom none !important
-    border-top solid 3px #ebebeb
-
-  .active-indicators, .view-active-trigger
-    display none !important
+.section .scrollArea
+  position relative
+  overflow: auto;
 
 /*
 /
@@ -87,9 +81,6 @@ button.side-bar-trigger
   height 50px
   width 50px
   color white
-
-.side-bar.expanded
-  flex 0 0 750px
 
 @media (max-width: 768px)
 
