--- a/client/styles/charts.styl
+++ b/client/styles/charts.styl
@@ -25,3 +25,20 @@
   position relative
   overflow auto
   height 75px
+
+/*
+/
+/ Line
+/
+*/
+
+.chart .line
+  fill none
+  stroke #7dc7f4
+  stroke-width 5px
+
+.chart .svg
+  -webkit-transition: all 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  -moz-transition: all 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  -o-transition: all 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  transition: all 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000); /* easeOutCubic */
