--- a/client/styles/charts.styl
+++ b/client/styles/charts.styl
@@ -37,7 +37,7 @@
   stroke #7dc7f4
   stroke-width 5px
 
-.chart .line, .chart .dot
+.chart .line, .chart .dot, .chart .bar
   -moz-transition all 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000)
   -o-transition all 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000)
   transition all 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000)
