--- a/client/styles/charts.styl
+++ b/client/styles/charts.styl
@@ -91,19 +91,17 @@
 //-o-transition transform 400ms
 //transition transform 400ms
 
-.grid .tick, line {
-  stroke: #ABABAB;
-  opacity: 0.7;
-  stroke-dasharray: 5 1;
-}
+.grid .tick, line
+  stroke #ABABAB
+  opacity 0.7
+  stroke-dasharray 5 1
 
-.grid .domain {
-  display: none;
-}
+.domain
+  display none
 
-.domain {
-  display: none;
-}
+.x-axis .domain
+  stroke #ABABAB
+  display block
 
 .chart-wrapper .line
   stroke-dasharray 500%
