added line chart popups

--- a/client/styles/main.styl
+++ b/client/styles/main.styl
@@ -58,8 +58,15 @@
 
 .top-bar .nav-bar
   background-color #525866
-  border-bottom solid #0faec6 2pt
+  border none
 
-.top-bar .nav-bar .unaki
+.top-bar .nav-bar
+  border none
+
+.top-bar .nav-bar .k4a
   margin 20px
   height 49px
+
+.top-bar .chart-selector
+  border none
+  box-shadow none
