non-functional nav bar

--- a/client/lib/semantic-ui/site/collections/menu.overrides.import.less
+++ b/client/lib/semantic-ui/site/collections/menu.overrides.import.less
@@ -2,6 +2,15 @@
     User Variable Overrides
 *******************************/
 
+.ui.inverted.menu .item {
+  color: white;
+}
+
+.nav-bar .ui.inverted.menu a.item:hover {
+  color: white;
+  background-color: #525866;
+}
+
 /*******************************
     Chart Selector Menu
 *******************************/
