--- a/client/lib/semantic-ui/semantic.less
+++ b/client/lib/semantic-ui/semantic.less
@@ -28,6 +28,7 @@
 & { @import "definitions/elements/segment.import.less"; }
 
 /* Collections */
+& { @import "definitions/collections/form.import.less"; }
 & { @import "definitions/collections/grid.import.less"; }
 & { @import "definitions/collections/menu.import.less"; }
 
@@ -35,6 +36,7 @@
 & { @import "definitions/views/item.import.less"; }
 
 /* Modules */
+& { @import "definitions/modules/checkbox.import.less"; }
 & { @import "definitions/modules/dropdown.import.less"; }
 & { @import "definitions/modules/popup.import.less"; }
 & { @import "definitions/modules/transition.import.less"; }
