--- a/client/styles/main.styl
+++ b/client/styles/main.styl
@@ -1,5 +1,29 @@
 /*
 /
+/ Admin
+/
+*/
+
+.handsontable {
+  z-index: 1;
+}
+
+td.error {
+  background-color: #ff4343 !important;
+}
+
+.title-bar {
+  height: 60px;
+  background-color: #525866;
+  border-bottom: solid #0faec6 2pt;
+}
+
+.ht_clone_top_left_corner th, tr {
+  height: 25px;
+}
+
+/*
+/
 / Layout
 /
 */
