--- a/client/lib/semantic-ui/semantic.less
+++ b/client/lib/semantic-ui/semantic.less
@@ -23,8 +23,10 @@
 & { @import "definitions/elements/divider.import.less"; }
 & { @import "definitions/elements/header.import.less"; }
 & { @import "definitions/elements/icon.import.less"; }
+& { @import "definitions/elements/image.import.less"; }
 & { @import "definitions/elements/input.import.less"; }
 & { @import "definitions/elements/list.import.less"; }
+& { @import "definitions/elements/loader.import.less"; }
 & { @import "definitions/elements/segment.import.less"; }
 
 /* Collections */
@@ -37,6 +39,8 @@
 
 /* Modules */
 & { @import "definitions/modules/checkbox.import.less"; }
+& { @import "definitions/modules/dimmer.import.less"; }
 & { @import "definitions/modules/dropdown.import.less"; }
+& { @import "definitions/modules/modal.import.less"; }
 & { @import "definitions/modules/popup.import.less"; }
 & { @import "definitions/modules/transition.import.less"; }
