--- a/client/lib/semantic-ui/semantic.less
+++ b/client/lib/semantic-ui/semantic.less
@@ -25,6 +25,7 @@
 & { @import "definitions/elements/icon.import.less"; }
 & { @import "definitions/elements/image.import.less"; }
 & { @import "definitions/elements/input.import.less"; }
+& { @import "definitions/elements/label.import.less"; }
 & { @import "definitions/elements/list.import.less"; }
 & { @import "definitions/elements/loader.import.less"; }
 & { @import "definitions/elements/segment.import.less"; }
