radar chart implemented

--- a/client/styles/charts.styl
+++ b/client/styles/charts.styl
@@ -76,7 +76,7 @@
 //-o-transition transform 400ms
 //transition transform 400ms
 
-.grid .tick, line
+.grid .tick line
   stroke #ABABAB
   opacity 0.7
   stroke-dasharray 5 1
