--- a/client/styles/main.styl
+++ b/client/styles/main.styl
@@ -41,27 +41,27 @@ td.error {
 .side-bar
   width 300px
 
-@media (max-width: 768px)
-
-  .content-wrapper
-    width 100%
-    margin 0
-
-  .side-bar
-    box-shadow none
-    border none
-    width 100% !important
-    position relative
-    margin 0
-    height 1000px
-
-  .section
-    height 500px
-    border-bottom none !important
-    border-top solid 3px #ebebeb
-
-  .active-indicators, .view-active-trigger
-    display none !important
+//@media (max-width: 768px)
+//
+//  .content-wrapper
+//    width 100%
+//    margin 0
+//
+//  .side-bar
+//    box-shadow none
+//    border none
+//    width 100% !important
+//    position relative
+//    margin 0
+//    height 1000px
+//
+//  .section
+//    height 500px
+//    border-bottom none !important
+//    border-top solid 3px #ebebeb
+//
+//  .active-indicators, .view-active-trigger
+//    display none !important
 
 /*
 /
