--- a/client/styles/charts.styl
+++ b/client/styles/charts.styl
@@ -11,7 +11,6 @@
 .chart-area .title
   overflow hidden
   min-height 75px
-  margin-bottom 25px
 
 .chart-area hr
   border solid 1px #00adc6
@@ -40,8 +39,8 @@
 */
 
 .chart-area .chart-wrapper
-  min-height 574px
-  padding 20px 20px 0px 75px
+  min-height 549px
+  padding 0 20px 0px 75px
 
 /*
 /
