--- a/client/styles/main.styl
+++ b/client/styles/main.styl
@@ -4,23 +4,19 @@
 /
 */
 
-.handsontable {
-  z-index: 1;
-}
+.handsontable
+  z-index 1
 
-td.error {
-  background-color: #ff4343 !important;
-}
+td.error
+  background-color #ff4343 !important
 
-.title-bar {
-  height: 60px;
-  background-color: #525866;
-  border-bottom: solid #0faec6 2pt;
-}
+.title-bar
+  height 60px
+  background-color #525866
+  border-bottom solid #0faec6 2pt
 
-.ht_clone_top_left_corner th, tr {
-  height: 25px;
-}
+.ht_clone_top_left_corner th, tr
+  height 25px
 
 /*
 /
@@ -30,10 +26,10 @@ td.error {
 
 .content-wrapper
   margin-right 300px
-  -webkit-transition: margin 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
-  -moz-transition: margin 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
-  -o-transition: margin 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
-  transition: margin 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000); /* easeOutCubic */
+  -webkit-transition margin 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  -moz-transition margin 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  -o-transition margin 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  transition margin 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000); /* easeOutCubic */
 
 .content-wrapper.shrink
   margin-right 750px
