--- a/client/styles/charts.styl
+++ b/client/styles/charts.styl
@@ -11,7 +11,7 @@
 
 .chart-area .title
   overflow hidden
-  min-height 75px
+  min-height 55px
 
 .chart-area hr
   border solid 1px #00adc6
@@ -41,7 +41,7 @@
 
 .chart-area .chart-wrapper
   height 549px
-  padding 0 20px 0px 75px
+  padding 20px 20px 0px 75px
 
 /*
 /
@@ -76,7 +76,7 @@
 //-o-transition transform 400ms
 //transition transform 400ms
 
-.grid .tick line
+g .tick line
   stroke #ABABAB
   opacity 0.7
   stroke-dasharray 5 1
