--- a/client/styles/main.styl
+++ b/client/styles/main.styl
@@ -1,3 +1,7 @@
+html, body, #app, #app > div
+  height 100%
+  width 100%
+
 /*
 /
 / Admin
@@ -29,7 +33,9 @@ td.error
   -webkit-transition margin 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
   -moz-transition margin 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
   -o-transition margin 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
-  transition margin 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000); /* easeOutCubic */
+  transition margin 400ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
+
+/* easeOutCubic */
 
 .content-wrapper.shrink
   margin-right 750px
