social links / flag upload framework

--- a/client/styles/main.styl
+++ b/client/styles/main.styl
@@ -11,6 +11,10 @@ html, body, #app, #app > div
 .handsontable
   z-index 1
 
+table.htCore th, table.htCore td {
+  vertical-align middle
+}
+
 td.error
   background-color #ff4343 !important
 
